fixed overflow thingy

--- a/src/Common/common.css
+++ b/src/Common/common.css
@@ -96,7 +96,7 @@
 	padding-bottom: 20px;
 }
 
-.App {
+.Preloader {
 	height: 100vh;
 	overflow: hidden;
 }
